--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,19 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://ta729ip.dev/'
+languageCode = 'ja'
+DefaultContentLanguage = "ja"
+canonifyurls = true
+publishDir = "docs"
+
+[languages]
+[languages.ja]
+title = 'ボリューム抵抗燃やし太郎のページ'
+subtitle = 'エンドミルで穴あけ'
+
+hasCJKlanguage = true
+theme = 'terminal'
+
+[Params]
+ContentTypeName = "posts"
+Owner = 'ta729ip'
+themeColor = 'green'
+
